# OpenWilly

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build_release.bat
crates/openwilly-common/: Cargo.toml
crates/openwilly-common/src/: lib.rs
crates/openwilly-ddraw/: Cargo.toml
crates/openwilly-ddraw/src/: lib.rs
crates/openwilly-director/: Cargo.toml
crates/openwilly-director/src/: lib.rs  xtra.rs
crates/openwilly-fileio/: Cargo.toml
crates/openwilly-fileio/src/: fileops.rs  lib.rs  pathmap.rs  xtra.rs
crates/openwilly-iso/: Cargo.toml
crates/openwilly-iso/src/: lib.rs
crates/openwilly-keypoll/: Cargo.toml
crates/openwilly-keypoll/src/: keyboard.rs  lib.rs  xtra.rs
crates/openwilly-launcher/: Cargo.toml
crates/openwilly-launcher/src/: main.rs
crates/openwilly-media/: Cargo.toml
crates/openwilly-media/src/: lib.rs
crates/openwilly-patcher/: Cargo.toml
crates/openwilly-patcher/src/: lib.rs
crates/openwilly-player/: Cargo.toml
crates/openwilly-player/data/: parts.hash.json
crates/openwilly-player/src/: main.rs
crates/openwilly-player/src/assets/: bitmap.rs  director.rs  mod.rs  palette.rs  sound.rs
crates/openwilly-player/src/engine/: font.rs  icon.rs  mod.rs  sound_engine.rs
crates/openwilly-player/src/game/: build_car.rs  cursor.rs  dashboard.rs  dev_menu.rs  dialog.rs  drag_drop.rs  driving.rs  i18n.rs  mod.rs  parts_db.rs  save.rs  scene_script.rs  scenes.rs  toolbox.rs
crates/openwilly-pmatic/: Cargo.toml
crates/openwilly-pmatic/src/: lib.rs
tools/: grid_viewer.py
tools/willy_re/: check_stride.py  debug_instrs.py  pyproject.toml
tools/willy_re/willy_re/: __init__.py  cli.py
tools/willy_re/willy_re/director/: __init__.py  bitmap.py  cast_types.py  chunks.py  external_casts.py  filmloop.py  fonts.py  ink.py  labels.py  misc_chunks.py  palette.py  parser.py  score.py  sound.py  text.py
tools/willy_re/willy_re/export/: __init__.py  exporter.py
tools/willy_re/willy_re/gamedata/: __init__.py  detector.py  extractor.py
tools/willy_re/willy_re/lingo/: __init__.py  ast_nodes.py  bytecode.py  decompiler.py  listparser.py  names.py
