[workspace]
resolver = "2"
members = [
    "crates/openwilly-launcher",
    "crates/openwilly-iso",
    "crates/openwilly-patcher",
    "crates/openwilly-media",
    "crates/openwilly-common",
    "crates/openwilly-director",
    "crates/openwilly-keypoll",
    "crates/openwilly-fileio",
    "crates/openwilly-pmatic",
    "crates/openwilly-player",
    "tools/pe-analyzer",
    "tools/iso-inspector",
    "tools/willy-wrapper",
    "tools/willy-setup",
]

# ARCHIVIERT: openwilly-ddraw wurde entfernt (PE-Analyse bewies: kein DirectDraw)

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenWilly Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/openwilly"

[workspace.dependencies]
# Shared dependencies across all crates
openwilly-common = { path = "crates/openwilly-common" }
openwilly-iso = { path = "crates/openwilly-iso" }
openwilly-patcher = { path = "crates/openwilly-patcher" }
openwilly-media = { path = "crates/openwilly-media" }
openwilly-fileio = { path = "crates/openwilly-fileio" }
openwilly-pmatic = { path = "crates/openwilly-pmatic" }

# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

# Windows APIs
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_ProcessStatus",
    "Win32_System_JobObjects",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_Dialogs",
    "Win32_Security",
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
