[package]
name = "openwilly-fileio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Replacement FILEIO.X32 Xtra for Director 6.0 – file I/O with CD-bypass"

[lib]
crate-type = ["cdylib"]  # Creates a DLL to replace FILEIO.X32

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Controls_Dialogs",
]}

# Build with: cargo build --release --target i686-pc-windows-msvc -p openwilly-fileio
