[package]
name = "openwilly-launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "openwilly"
path = "src/main.rs"

[dependencies]
openwilly-common = { workspace = true }
openwilly-iso = { workspace = true }
openwilly-patcher = { workspace = true }

# GUI
egui = "0.28"
eframe = { version = "0.28", features = ["default"] }

# Async
tokio = { version = "1.0", features = ["full"] }

# Utils
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
windows.workspace = true

# File dialogs
rfd = "0.14"

# Time handling
chrono = "0.4"

# Open URLs in browser
open = "5.0"
