[package]
name = "openwilly-media"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openwilly-common = { workspace = true }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# For future Smacker video support
# ffmpeg-next = "6.0"

# Audio playback
# rodio = "0.17"

[dev-dependencies]
