[package]
name = "openwilly-patcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openwilly-common = { workspace = true }

windows.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# PE file parsing
pelite = "0.10"

# Function hooking (requires nightly - disabled for stable builds)
# retour = { version = "0.3", features = ["static-detour"] }

[dev-dependencies]
