[package]
name = "openwilly-pmatic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Stub replacement for PMATIC.X32 (PrintOMatic) Xtra – not used by game"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
]}

# Build with: cargo build --release --target i686-pc-windows-msvc -p openwilly-pmatic
